# Django-3-ecommerce

./: .gitlab-ci.yml  README.rst  pyproject.toml  pytest.ini
eshop/: admin.py  apps.py  asgi.py  forms.py  mixins.py  models.py  settings.py  urls.py  views.py  wsgi.py
eshop/migrations/: 0001_initial.py
eshop/templates/: base.html  cart.html  category_detail.html  checkout.html  login.html  product_detail.html  profile.html  registration.html
eshop/templatetags/: specifications.py
locale/en/LC_MESSAGES/: django.mo  django.po
locale/lt/LC_MESSAGES/: django.mo  django.po
tests/: test_eshop.py
