[tool.poetry]
name = "eshop"
version = "0.1.0"
description = ""
authors = ["John Smith <john@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.5"
Pillow = "^8.1.0"
django-crispy-forms = "^1.11.0"
stripe = "^2.55.2"
django-rosetta = "^0.9.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-django = "^4.1.0"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
